# geargen

./: .gitignore  LICENSE  README.md  pyproject.toml
geargen/: __main__.py  bevel.py  cli.py  parallel.py  profile.py
